--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,15 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 14.x
+        
+    - name: listar pre-caminho 
+      run: pwd    
+        
+    - name: Navegar até o diretório do projeto
+      run: cd cadastro-produtor-rural/cadastro-produtor-rural/
+      
+    - name: listar pos-caminho
+      run: pwd   
 
     - name: Install Dependencies
       run: npm ci
