--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 14.x
+    
+    - name: alterar diretorio
+      run: /home/runner/work/cadastro-produtor-rural/cadastro-produtor-rural/cadastro-produtor-rural 
         
     - name: listar arquivos
       run: ls -lah    
